--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="menu-bar">
         <ul>
-            <li class="active"><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+            <li class="active"><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
             <li><a href="#"><i class="fa fa-user"></i>About us</a>
                 <div class="sub-menu-1">
                     <ul>
@@ -54,7 +54,7 @@
             <li><a href="#"><i class="fa fa-users" aria-hidden="true"></i>Ckients</a></li>
             <li><a href="#"><i class="fa fa-angellist" aria-hidden="true"></i>Investers</a></li>
             <li><a href="#"><i class="fa fa-inr" aria-hidden="true"></i>Pricing</a></li>
-            <li><a href="#"><i class="fa fa-edit" aria-hidden="true"></i>Training</a></li>
+            <li><a href="YouTube.html" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i>YouTube</a></li>
             <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
         </ul>
    </div>
